# dummy-crm-server

./: .gitignore  Cargo.toml  Dockerfile  DockerfileDebug  Makefile  argocd.yaml  auth-secret.txt  namespace.yaml  postgres-config.yaml  postgres-persistent-volume.yaml  postgresql-deployment.yaml  readme.txt  redis-secret.txt
docker/: DockerfileDebug
k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  postgresql.yaml  redis.yaml  service.yaml
src/: articulos.rs  clientes.rs  corpservice.rs  issue_request.rs  issuerequest.rs  issueservice.rs  main.rs  postgresini.rs  sesion.rs
