[package]
name = "dummy-crm-server"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.29.1", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
#rocket_codegen = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
log = "0.4.27"
